...
                    android:id="@+id/textbox_input_multiline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/component_bottom_spacing"
                    android:enabled="@{texteditBoxfragment.disableEditBoxes? false: true}"
                    android:gravity="top"
                    android:hint="@string/dialog_screen_short_content_text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
