...
    <string name="dim_layer_header">Dimlayer Options</string>
    <string name="dialog_subtle">Subtle</string>
    <string name="dialog_strong">Strong</string>
    <string name="dialog_screen_alert_checkbox_text">With icon and title</string>
    <string name="dialog_screen_dialog_checkbox_text">With scrollable list</string>
    <string name="dialog_header_text">Dialog</string>
    <string name="alert_header_text">Alert</string>
    <string name="dialog_screen_button_text_dialog">Show dialog</string>
    <string name="dialog_screen_button_text_alert">Show alert</string>
    <string name="alert_short_content_text">Delete this record?</string>
    <string name="alert_long_content_text">Joe Doe will be removed from the patient list and all records related to this patient will be deleted.</string>
    <string name="alert_title_text">Are you sure you want to delete?</string>
    <string name="alert_positive_button_text">Delete</string>
...
