...
    <string name="uikit_splash_title">Mobile App</string>
    <string name="color_background">Use Color Background</string>
    <string name="solid">solid</string>
    <string name="gradient">gradient</string>
    <string name="image">Image</string>
    <string name="blue_theme">Blue Theme</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="aqua_theme">Aqua Theme</string>
    <string name="misc_shadow_message">Miscellaneous Buttons with Shadow</string>
    <string name="action_icons">Action Icons</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
...
